# monarch

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum  install.sh
.github/workflows/: build.yml  deploy-test.yml  docker-deploy.yml  pypi-deploy.yml  pypi.yml  test-deploy.yml
cmd/builder/: main.go
cmd/client/: monarch-client.go
cmd/monarch/: monarch.go
cmd/server/: main.go  monarch-server.go
configs/: .monarch.yaml  README.md  monarch.yaml  monarch_http.json  royal.yaml
docker/builder/: Dockerfile
docker/monarch/: Dockerfile
docker/translator/: Dockerfile
frontend/: .gitignore
frontend/monarch/: CMakeLists.txt  CMakeUserPresets.json  main.cpp  monarch.cpp  monarch.h  monarch.ui  qt.cmake
pkg/agent/: agent.go
pkg/builder/: builder.go
pkg/commands/: agents.go  agents_info.go  agents_rm.go  build.go  build_profiles.go  builders.go  co-op.go  commands.go  exit.go  http.go  install.go  install_local.go  send.go  sessions.go  shutdown.go  stage.go  tcp.go  uninstall.go  use.go  version.go
pkg/completion/: completion.go
pkg/config/: config.go  model.go
pkg/console/: console.go
pkg/consts/: consts.go
pkg/coop/: coop.go
pkg/crypto/: aes.go  certs.go  crypto.go  utils.go
pkg/db/: db.go  models.go
pkg/docker/: docker.go
pkg/install/: README.md  install.go  install_test.go
pkg/lint/: lint.go
pkg/log/: console.go  file.go  log.go
pkg/rpcpb/: services.pb.go  services.proto  (+1 more)
python/: README.md  setup.py
scripts/: docker-entrypoint.sh  docker-install-monarch.sh  install-monarch.sh  install.sh  uninstall-monarch.sh
(+42 files in other folders)
